﻿zg 13.07.2014 14:50:01 +0200 - build 3999

1. уточнение 3992: диалоги показывались только один раз после создания.

drkns 13.07.2014 14:24:22 +0200 - build 3998

1. Опция Interface.FormatNumberSeparators теперь имеет строковый тип.

2. В отладочном билде включен SmallerTypeCheck.

3. Рефакторинг.

drkns 12.07.2014 20:33:45 +0200 - build 3997

1. Уточнение 3996 и ещё пара мелочей.

drkns 12.07.2014 14:18:49 +0200 - build 3996

1. Добавлена опция /set:<parameter>=<value>, позволяющая переопределять основные настройки (см. far:config).

drkns 12.07.2014 09:45:28 +0200

1. Во внешний DialogBuilder добавлена поддержка списков.

zg 11.07.2014 22:11:38 +0200 - build 3995

1. уточнение 3993: при переходе по +/- в просмотре не вызывался EE_READ.

zg 11.07.2014 19:21:21 +0200 - build 3994

1. уточнение 3981 для горизонтального меню.

zg 10.07.2014 22:54:11 +0200 - build 3993

1. VE_READ вызывается, когда окно просмотра полностью сконструировано.

zg 10.07.2014 20:54:25 +0200 - build 3992

1. уточнение 3981.

zg 10.07.2014 15:49:53 +0200 - build 3991

1. уточнение 3985: в EE_CLOSE не работали ECTL_GETINFO и ECTL_GETBOOKMARKS.

zg 10.07.2014 13:54:25 +0200 - build 3990

1. при переоткрытии файла в редакторе мог удалятся не тот фрейм. вплоть до панелей.

drkns 10.07.2014 09:14:35 +0200 - build 3989

1. Древний баг, но начал проявляться только при недавних падениях при выходе:
   - нельзя закрывать хендлы, которые кто-то ещё ждёт по WaitForMultipleObjects.

zg 10.07.2014 03:05:00 +0200 - build 3988

1. уточнение 3981: не работал ключ /v.

2. уточнение 3986: падение при выходе.

drkns 09.07.2014 22:10:05 +0200 - build 3987

1. Рефакторинг.

zg 09.07.2014 21:38:08 +0200 - build 3986

1. редкое падение при переоткрытии файла в редакторе.

2. зависание при последовательном открытии/закрытии редактора через апи.

3. уточнение 3981.

zg 09.07.2014 15:36:33 +0200 - build 3985

1. с форума "ACTL_GETWINDOWTYPE и ACTL_GETWINDOWINFO не работают, будучи вызваны из EE_CLOSE/VE_CLOSE".
