@@ -1,4 +1,8 @@
-﻿zg 13.07.2014 14:50:01 +0200 - build 3999
+﻿drkns 14.07.2014 14:39:33 +0200 - build 4000
+
+1. 0002709: Запрос привилегий администратора может быть невидим если вызван макросом
+
+zg 13.07.2014 14:50:01 +0200 - build 3999
 
 1. уточнение 3992: диалоги показывались только один раз после создания.
 
